force-app/main/default/objects/Lead/fields/AdId__c.field-meta.xml
<CustomField>
    <fullName>AdId__c</fullName>
    <label>AdId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>