force-app/main/default/objects/Lead/fields/AdsInfo__c.field-meta.xml
<CustomField>
    <fullName>AdsInfo__c</fullName>
    <label>AdsInfo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>