force-app/main/default/objects/Lead/fields/LinkAd__c.field-meta.xml
<CustomField>
    <fullName>LinkAd__c</fullName>
    <label>LinkAd</label>
    <type>Url</type>
</CustomField>