force-app/main/default/objects/Lead/fields/ListId__c.field-meta.xml
<CustomField>
    <fullName>ListId__c</fullName>
    <label>ListId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>